# bennugd_cmake

./: CMakeLists.txt
core/bgdc/: CMakeLists.txt
core/bgdi/: CMakeLists.txt
core/bgdi/src/: CMakeLists.txt
core/bgdrtm/: CMakeLists.txt
core/bgdrtm/src/: CMakeLists.txt  sysprocs.c
modules/: CMakeLists.txt
modules/libbgload/: CMakeLists.txt
modules/libbgload/.deps/: libbgload_la-bgload.Plo
modules/libbgload/.libs/: libbgload.lai
modules/libblit/: CMakeLists.txt  Makefile
modules/libblit/.deps/: libblit_la-g_blit.Plo  libblit_la-g_pixel.Plo  libblit_la-libblit.Plo
modules/libblit/.libs/: libblit.lai
modules/libdraw/: CMakeLists.txt  Makefile  libdraw.c
modules/libdraw/.deps/: libdraw_la-libdraw.Plo
modules/libdraw/.libs/: libdraw.lai
modules/libfont/: CMakeLists.txt  Makefile
modules/libfont/.deps/: libfont_la-libfont.Plo
modules/libfont/.libs/: libfont.lai
modules/libgrbase/: CMakeLists.txt  Makefile  libgrbase.la
modules/libgrbase/.deps/: libgrbase_la-g_bitmap.Plo  libgrbase_la-g_blendop.Plo  libgrbase_la-g_clear.Plo  libgrbase_la-g_conversion.Plo  libgrbase_la-g_grlib.Plo  libgrbase_la-g_pal.Plo  libgrbase_la-libgrbase.Plo
modules/libgrbase/.libs/: libgrbase.lai
modules/libjoy/: CMakeLists.txt  Makefile
modules/libjoy/.deps/: libjoy_la-libjoy.Plo
modules/libjoy/.libs/: libjoy.lai
modules/libkey/: CMakeLists.txt  Makefile
modules/libkey/.deps/: libkey_la-libkey.Plo
modules/libkey/.libs/: libkey.lai
modules/libmouse/: CMakeLists.txt  Makefile
modules/libmouse/.deps/: libmouse_la-libmouse.Plo
modules/libmouse/.libs/: libmouse.lai
modules/librender/: CMakeLists.txt  Makefile
modules/librender/.deps/: librender_la-g_fade.Plo  librender_la-g_frame.Plo  librender_la-g_instance.Plo  librender_la-g_object.Plo  librender_la-g_rects.Plo  librender_la-g_screen.Plo  librender_la-librender.Plo  librender_la-scaler_hq2x.Plo  librender_la-scaler_normal.Plo  librender_la-scaler_scale2x.Plo  librender_la-scaler_scanline.Plo
modules/librender/.libs/: librender.lai
modules/libscroll/: CMakeLists.txt  Makefile  libscroll.c
modules/libscroll/.deps/: libscroll_la-libscroll.Plo
modules/libscroll/.libs/: libscroll.lai
modules/libsdlhandler/: CMakeLists.txt  Makefile
modules/libsdlhandler/.deps/: libsdlhandler_la-libsdlhandler.Plo
modules/libsdlhandler/.libs/: libsdlhandler.lai
modules/libtext/: CMakeLists.txt  Makefile
modules/libtext/.deps/: libtext_la-libtext.Plo
modules/libtext/.libs/: libtext.lai
modules/libvideo/: CMakeLists.txt  Makefile
modules/libvideo/.deps/: libvideo_la-g_regions.Plo  libvideo_la-g_video.Plo
modules/libvideo/.libs/: libvideo.lai
modules/libwm/: CMakeLists.txt  Makefile
modules/libwm/.deps/: libwm_la-libwm.Plo
modules/libwm/.libs/: libwm.lai
modules/mod_blendop/: CMakeLists.txt  Makefile
modules/mod_blendop/.deps/: libmod_blendop_la-mod_blendop.Plo
modules/mod_blendop/.libs/: libmod_blendop.lai
modules/mod_cd/: CMakeLists.txt  Makefile
modules/mod_cd/.deps/: libmod_cd_la-mod_cd.Plo
modules/mod_cd/.libs/: libmod_cd.lai
modules/mod_crypt/: CMakeLists.txt  Makefile
modules/mod_crypt/.deps/: libmod_crypt_la-mod_crypt.Plo
modules/mod_crypt/.libs/: libmod_crypt.lai
modules/mod_debug/: CMakeLists.txt  Makefile  mod_debug.c
modules/mod_debug/.deps/: libmod_debug_la-mod_debug.Plo  libmod_debug_la-systexts.Plo
modules/mod_debug/.libs/: libmod_debug.lai
modules/mod_dir/: CMakeLists.txt  Makefile
modules/mod_dir/.deps/: libmod_dir_la-mod_dir.Plo
modules/mod_dir/.libs/: libmod_dir.lai
modules/mod_draw/: CMakeLists.txt  Makefile
modules/mod_draw/.deps/: libmod_draw_la-mod_draw.Plo
modules/mod_draw/.libs/: libmod_draw.lai
modules/mod_effects/: CMakeLists.txt  Makefile
modules/mod_effects/.deps/: libmod_effects_la-mod_effects.Plo
modules/mod_effects/.libs/: libmod_effects.lai
modules/mod_file/: CMakeLists.txt  Makefile
modules/mod_file/.deps/: libmod_file_la-mod_file.Plo
modules/mod_file/.libs/: libmod_file.lai
modules/mod_flic/: CMakeLists.txt  Makefile
modules/mod_flic/.deps/: libmod_flic_la-mod_flic.Plo
modules/mod_flic/.libs/: libmod_flic.lai
modules/mod_grproc/: CMakeLists.txt  Makefile  mod_grproc.c
modules/mod_grproc/.deps/: libmod_grproc_la-mod_grproc.Plo
modules/mod_grproc/.libs/: libmod_grproc.lai
modules/mod_joy/: CMakeLists.txt  Makefile
modules/mod_joy/.deps/: libmod_joy_la-mod_joy.Plo
modules/mod_joy/.libs/: libmod_joy.lai
modules/mod_key/: CMakeLists.txt  Makefile
modules/mod_key/.deps/: libmod_key_la-mod_key.Plo
modules/mod_key/.libs/: libmod_key.lai
modules/mod_m7/: CMakeLists.txt  Makefile  mod_m7.c
modules/mod_m7/.deps/: libmod_m7_la-mod_m7.Plo
modules/mod_m7/.libs/: libmod_m7.lai
modules/mod_map/: CMakeLists.txt  Makefile  file_png.c
modules/mod_map/.deps/: libmod_map_la-file_fnt.Plo  libmod_map_la-file_fpg.Plo  libmod_map_la-file_map.Plo  libmod_map_la-file_pal.Plo  libmod_map_la-file_pcx.Plo  libmod_map_la-file_png.Plo  libmod_map_la-mod_map.Plo
modules/mod_map/.libs/: libmod_map.lai
modules/mod_math/: CMakeLists.txt  Makefile
modules/mod_math/.deps/: libmod_math_la-mod_math.Plo
modules/mod_mathi/: CMakeLists.txt  Makefile
modules/mod_mem/: CMakeLists.txt  Makefile  mod_mem.c
modules/mod_mouse/: CMakeLists.txt  Makefile
modules/mod_path/: CMakeLists.txt  Makefile
modules/mod_proc/: CMakeLists.txt  Makefile
modules/mod_rand/: CMakeLists.txt  Makefile
modules/mod_regex/: CMakeLists.txt  Makefile
modules/mod_say/: CMakeLists.txt  Makefile
modules/mod_screen/: CMakeLists.txt  Makefile  mod_screen.c
modules/mod_scroll/: CMakeLists.txt  Makefile
modules/mod_sort/: CMakeLists.txt  Makefile
modules/mod_sound/: CMakeLists.txt  Makefile
modules/mod_string/: CMakeLists.txt  Makefile
modules/mod_sys/: CMakeLists.txt  Makefile
modules/mod_text/: CMakeLists.txt  Makefile
modules/mod_time/: CMakeLists.txt  Makefile
modules/mod_timers/: CMakeLists.txt  Makefile
modules/mod_video/: CMakeLists.txt  Makefile
modules/mod_wm/: CMakeLists.txt  Makefile  mod_wm.c
(+65 files in other folders)
